<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >


        <PreferenceCategory app:title="@string/pref_category_metrics">

			<SwitchPreferenceCompat
				app:defaultValue="true"
				app:key="metric_enabled"
				app:summaryOff="@string/pref_metric_enabled_summary_off"
				app:summaryOn="@string/pref_metric_enabled_summary_on"
				app:switchTextOff="@string/pref_metric_enabled_off"
				app:switchTextOn="@string/pref_metric_enabled_on"
				app:title="@string/pref_metric_enabled_title" />

        	<ListPreference
				app:key="metric_count"
				app:title="@string/pref_metric_count_title"
				app:summary="@string/pref_metric_count_summary"
				app:defaultValue="30"
				app:entries="@array/metric_count_entries"
				app:entryValues="@array/metric_count_entryValues"
				app:dialogTitle="@string/pref_metric_count_title"
				app:useSimpleSummaryProvider="true"/>
        	
        	<ListPreference
				app:key="metric_period"
				app:title="@string/pref_metric_period_title"
				app:summary="@string/pref_metric_period_summary"
				app:defaultValue="2"
				app:entries="@array/metric_period_entries"
				app:entryValues="@array/metric_period_entryValues"
				app:dialogTitle="@string/pref_metric_period_title"
				app:useSimpleSummaryProvider="true"/>
        	
    </PreferenceCategory>
    
</PreferenceScreen>