<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.app.com/apk/res-auto" >

    <PreferenceCategory app:title="@string/pref_category_general" >

        <ListPreference
            app:defaultValue="Slide"
            app:dialogTitle="@string/pref_tab_transition_title"
            app:entries="@array/tab_transition_entries"
            app:entryValues="@array/tab_transition_entryValues"
            app:key="tab_transition"
            app:summary="@string/pref_tab_transition_summary"
            app:title="@string/pref_tab_transition_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notifications"
            app:summaryOff="@string/pref_notifications_summary_off"
            app:summaryOn="@string/pref_notifications_summary_on"
            app:switchTextOff="@string/pref_notifications_switch_off"
            app:switchTextOn="@string/pref_notifications_switch_on"
            app:title="@string/pref_notifications_title" />

        <ListPreference
            app:defaultValue="30000"
            app:dialogTitle="@string/pref_widget_interval_title"
            app:entries="@array/widget_interval_entries"
            app:entryValues="@array/widget_interval_entryValues"
            app:key="widget_interval"
            app:summary="@string/pref_widget_interval_summary"
            app:title="@string/pref_widget_interval_title" />
    </PreferenceCategory>

</PreferenceScreen>