<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_name"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_host_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_host"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/server_host_help">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text">
            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/server_ssl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:id="@+id/ssl_label"
            style="?attr/textAppearanceSubtitle1"
            android:text="@string/server_ssl" />


        <Switch
            android:id="@+id/server_ssl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusUp="@id/server_host"
            android:nextFocusDown="@+id/server_port"
            android:textOn="Enabled"
            android:textOff="Disabled" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_port_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port"
        app:endIconMode="custom"
        app:helperTextEnabled="true"
        app:helperText="@string/server_port_help">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_username"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_menu_help"
        app:helperTextEnabled="true"
        app:helperText="@string/server_username_help">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_password"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/server_password_help">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>