<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vbox="http://schemas.android.com/apk/res/com.kedzie.vbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >

    <TextView
        android:id="@+id/videoMemory_label"
        style="@style/SmallTextPrimary"
        android:text="@string/settings_vram" />

    <com.kedzie.vbox.app.SliderView
        android:id="@+id/videoMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/videoMemory_label"
        android:layout_toRightOf="@id/videoMemory_label"
        vbox:tickSpacing="10"
        vbox:unit="MB" />

    <TextView
        android:id="@+id/numMonitors_label"
        style="@style/SmallTextPrimary"
        android:layout_alignRight="@id/videoMemory_label"
        android:layout_below="@id/videoMemory"
        android:text="@string/settings_num_monitors" />

    <com.kedzie.vbox.app.SliderView
        android:id="@+id/numMonitors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/numMonitors_label"
        android:layout_toRightOf="@id/numMonitors_label"/>

    <TextView
        android:id="@+id/extended_features"
        style="@style/SmallTextPrimary"
        android:layout_below="@id/numMonitors"
        android:text="@string/extended_features" />

    <CheckBox
        android:id="@+id/acceleration3D"
        android:contentDescription="3D Acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/extended_features"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_3d_acceleration" />

    <CheckBox
        android:id="@+id/acceleration2D"
        android:contentDescription="2D Acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/acceleration3D"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_2d_acceleration" />

    <TextView
        android:id="@+id/error_message"
        style="@style/ErrorMessage"
        android:layout_below="@id/acceleration2D"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"/>

</RelativeLayout>