<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/staticTab"
    android:padding="8dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostnet_ipv4_ip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host_interface_ipv4_ip"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostnet_ipv4_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostnet_ipv4_mask_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host_interface_ipv4_mask"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostnet_ipv4_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostnet_ipv6_ip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host_interface_ipv6_ip"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostnet_ipv6_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostnet_ipv6_mask_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/host_interface_ipv6_mask"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hostnet_ipv6_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>