<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dhcpTab"
    android:padding="8dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/dhcp_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enabled" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dhcp_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dhcp_ip"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dhcp_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dhcp_mask_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dhcp_mask"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dhcp_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dhcp_lowerbound_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dhcp_lower_bound"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dhcp_lowerbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dhcp_upperbound_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dhcp_upper_bound"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dhcp_upperbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>